<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/users_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/item_user_rv"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:contentPadding="4dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_marginTop="4dp"
                android:layout_gravity="center"
                tools:src="@drawable/male"
                app:civ_border_width="2dp"
                app:civ_border_color="@color/colorOrange"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:fontFamily="@font/bungee"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:drawablePadding="4dp" />

            <TextView
                android:id="@+id/userNameTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Android Developer"
                android:fontFamily="@font/poppins_semibold"
                android:padding="4dp"
                android:gravity="center"
                android:drawablePadding="4dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/colorOrange" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/job_title"
                android:fontFamily="@font/bungee"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:drawablePadding="4dp" />

            <TextView
                android:id="@+id/jobTitleTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Mahmoud Mousa"
                android:fontFamily="@font/poppins_semibold"
                android:padding="4dp"
                android:gravity="center"
                android:drawablePadding="4dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/colorOrange" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:fontFamily="@font/bungee"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:drawablePadding="4dp" />

            <TextView
                android:id="@+id/genderTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Male"
                android:fontFamily="@font/poppins_semibold"
                android:padding="4dp"
                android:gravity="center"
                android:drawablePadding="4dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/colorOrange" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:fontFamily="@font/bungee"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:drawablePadding="4dp" />

            <TextView
                android:id="@+id/ageTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="23"
                android:fontFamily="@font/poppins_semibold"
                android:padding="4dp"
                android:gravity="center"
                android:drawablePadding="4dp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>